updated "select2" to version 4.0.0 - many incompatible changes fixed

--- a/softwerkskammer/lib/activities/views/edit.jade
+++ b/softwerkskammer/lib/activities/views/edit.jade
@@ -20,4 +20,4 @@ block title
   | #{t('activities.activity')}
 
 block content
-  +activityform(activity, groups)
+  +activityform(activity, groups, editorNames, participantNames)
