--- a/softwerkskammer/lib/activities/views/activities-forms.jade
+++ b/softwerkskammer/lib/activities/views/activities-forms.jade
@@ -1,6 +1,6 @@
 include  ../../../views/formComponents
 
-mixin activityform(activity, groups)
+mixin activityform(activity, groups, editorNames, participantNames)
   form(id='activityform', action='/activities/submit', method='post')
     +csrf
     if (activity.id())
@@ -35,7 +35,7 @@ mixin activityform(activity, groups)
                   #dates.col-xs-6(style='padding-left:3px;padding-right:0px')
                     +time('endTime', activity.endMoment().locale(language).format('LT'))
               +textarea('description', t('general.description'), activity.description())
-              +textWithTags('editorIds', t('activities.editors'), editorNames, participantNames)
+              +multiselect('editorIds', t('activities.editors'), editorNames, participantNames)
             .col-md-6
               .form-group
                 +controlLabel('url', t('activities.address_suffix'), t('activities.tooltip.address_suffix'))
