--- a/softwerkskammer/views/formComponents.jade
+++ b/softwerkskammer/views/formComponents.jade
@@ -11,19 +11,17 @@ mixin text(name, label, value, tooltip, placeholder, readonly)
 
 mixin textWithTags(name, label, value, tags)
   .form-group
-    +controlLabel(name, label, tooltip)
-    input.form-control(id=name, type='hidden', name=name, value=value)
+    +controlLabel(name, label)
+    select.form-control(multiple, id=name, name=name)
+      each tag in tags
+        option(selected = value.indexOf(tag) > -1) #{tag}
     script.
-      $(#{name}).select2({
-        tags: !{JSON.stringify(tags)},
-        separator: ', ',
-        tokenSeparators: [',', ', ']
-      });
+      $(#{name}).select2({tags: true, tokenSeparators: [',', ', ']});
 
 mixin multiselect(name, label, value, tags)
   .form-group
-    +controlLabel(name, label, tooltip)
-    select.form-control(multiple, id=name, name=name, value=value)
+    +controlLabel(name, label)
+    select.form-control(multiple, id=name, name=name)
       each tag in tags
         option(selected = value.indexOf(tag) > -1) #{tag}
     script.
