sometimes failing tests are simply wrong tests...

--- a/softwerkskammer/frontendtests/fixtures/forms.jade
+++ b/softwerkskammer/frontendtests/fixtures/forms.jade
@@ -5,7 +5,7 @@ include ../../lib/mailsender/views/mailsender-forms
 include ../../lib/members/views/members-forms
 include ../../lib/payment/views/paymentFormComponents
   
-+activityform(activity, groups)
++activityform(activity, groups, [], [])
 
 +announcementform(announcement)
 
@@ -13,6 +13,6 @@ include ../../lib/payment/views/paymentFormComponents
 
 +mailform(message, regionalgroups, themegroups)
 
-+memberform(member, regionalgroups, themegroups)
++memberform(member, regionalgroups, themegroups, [])
 
 +paymentCreditCard(paymentInfo)
