Mention dimension of bed of junior bedrooms
There was some confusion whether the length of a junior bed is only 160cm. The hotel website states that a junior bed is 160cm in width :-) this should clear up some confusion :)

--- a/socrates/lib/registration/views/participationinfoform.jade
+++ b/socrates/lib/registration/views/participationinfoform.jade
@@ -9,7 +9,7 @@ mixin participationinfoform(activity, roomOptions, registration)
       ul
         li Single bed room
         li Double bed room, can only be shared
-        li Junior double bed room (one 160cm bed), can be shared or occupied exclusively
+        li Junior double bed room (one 160cm wide bed), can be shared or occupied exclusively
       p If you stay at least until Sunday evening, we assume that you want to participate in the Coderetreat or in one of the workshops on Sunday.
       p All prices are per person and include:
       ul
