--- a/softwerkskammer/frontend/less/agora.less
+++ b/softwerkskammer/frontend/less/agora.less
@@ -215,7 +215,7 @@ a {
   color: inherit !important;
 }
 
-// File upload button in Activityresults
+// File upload button
 .btn-file {
   position: relative;
   overflow: hidden;
