editing from the participants overview returns to the same page after saving

--- a/socrates/lib/members/views/edit.jade
+++ b/socrates/lib/members/views/edit.jade
@@ -17,6 +17,7 @@ block content
   form#memberform.relaxed(action='/members/submit',method='post')
     +editButtons
 
+    +hidden('returnToParticipantsListing', returnToParticipantsListing)
     +csrf
     .row
       .col-sm-12
