--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -86,6 +86,11 @@ block content
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France 2015')
                 br
                 small 24 - 27 Sept 2015, Rochegude
+            .col-sm-6
+              h5
+                +extlink('http://socratesbe.org', 'SoCraTes BE 2015')
+                br
+                small 22 - 25 Oct 2015, Nieuwpoort
 
 
 
