--- a/softwerkskammer/frontend/less/agora.less
+++ b/softwerkskammer/frontend/less/agora.less
@@ -56,6 +56,12 @@ pre code {
   max-height: 30px;
 }
 
+.fc-scroller {
+  /* never scrollbars */
+  overflow-y: parent !important;
+  overflow-x: parent !important;
+}
+
 // fullcalendar *END*
 
 .verySmall {
