Only display the roommate information at all when the participant can have a roommate.

--- a/socrates/lib/members/views/get.jade
+++ b/socrates/lib/members/views/get.jade
@@ -33,7 +33,7 @@ block content
           | #{member.twitter()}
 
       p
-        if(accessrights.canEditMember(member))
+        if(accessrights.canEditMember(member) && isInDoubleBedRoom)
           strong #{t('members.roommate')}:&nbsp;
           | #{roommate}
 
