--- a/socrates/frontendtests/fixtures/forms.jade
+++ b/socrates/frontendtests/fixtures/forms.jade
@@ -9,7 +9,7 @@ include ../../lib/members/views/userinfoform
 form#participationform.relaxed(action='/registration/completeRegistration', method='post')
   +csrf
   fieldset
-    +memberinfoform(member, 'members.edit_registration')
+    +memberinfoform(member, null, 'members.edit_registration')
     +userinfoform(addon, participation)
     .row(style='margin-bottom: 10px')
       .col-sm-12
