--- a/socrates/lib/members/views/edit.jade
+++ b/socrates/lib/members/views/edit.jade
@@ -24,7 +24,7 @@ block content
         legend
           h4 #{t('members.personal_data')}
 
-    +memberinfoform(member, accessrights.isRegistered() ? null : 'members.edit_preregistration')
+    +memberinfoform(member, subscriber, accessrights.isRegistered() ? null : 'members.edit_preregistration')
     if (addon && addon.homeAddress)
       +userinfoform(addon, participation, sharesARoom)
       .gutter
