SoCraTes Wiki changes now clearly from SoCraTes server

--- a/socrates/lib/notifications/jade/wikichangetemplate.jade
+++ b/socrates/lib/notifications/jade/wikichangetemplate.jade
@@ -38,7 +38,7 @@ html
       }
 
   body
-    h2 The following wiki pages have changed:
+    h2 The following SoCraTes wiki pages have changed:
     each directory in directories
       h3 Wiki "#{directory.dir}"
       each file in directory.sortedFiles()
