let javascript do the coercion

--- a/softwerkskammer/lib/mailsender/views/mailtemplate.jade
+++ b/softwerkskammer/lib/mailsender/views/mailtemplate.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    if !!buttons && buttons.length > 0
+    if buttons && buttons.length > 0
       style.
         a.btn {
           background-color: rgb(66, 139, 202);
