Moved decision logic into Jade file, preparing for the next steps.

--- a/socrates/lib/members/views/get.jade
+++ b/socrates/lib/members/views/get.jade
@@ -35,7 +35,10 @@ block content
       if(accessrights.canEditMember(member) && isInDoubleBedRoom)
         p
           strong #{t('members.roommate')}:&nbsp;
-          | #{roommate}
+          if roommate
+            | #{roommate.displayName()}
+          else
+            | Not assigned yet
 
       p &nbsp;
     .col-md-4
