continue removing jslint from code

--- a/softwerkskammer/lib/site/views/credits.jade
+++ b/softwerkskammer/lib/site/views/credits.jade
@@ -97,7 +97,7 @@ block content
       h2 Dev/Build/Test
       dl.dl-horizontal
         +defItem('Grunt', 'http://gruntjs.com', 'Build-Runner')
-        +defItem('JSLint (grunt)', 'https://github.com/stephenmathieson/grunt-jslint', 'Grunt Integration für JSLint')
+        +defItem('ESLint (grunt)', 'https://github.com/sindresorhus/grunt-eslint', 'Grunt Integration für ESLint')
         +defItem('Grunt Less', 'https://github.com/gruntjs/grunt-contrib-less', 'Grunt Integration für LESS Compilierung')
         +defItem('Grunt Uglify', 'https://github.com/gruntjs/grunt-contrib-uglify', 'Grunt Minifizierung für JS-Files')
         +defItem('Grunt Mocha Istanbul', 'https://github.com/pocesar/grunt-mocha-istanbul', 'Mocha Tests im Grunt + Coverage')
@@ -105,7 +105,7 @@ block content
         +defItem('Sinon', 'http://sinonjs.org', 'Mock Framework')
         +defItem('Request', 'http://github.com/mikeal/request.git', 'Für Integrationstests')
         +defItem('Supertest', 'https://github.com/visionmedia/supertest', 'Einfache Integrationstests')
-        +defItem('JSLint', 'http://www.jslint.com', 'Metrik/Qualitäts/Style Checker')
+        +defItem('ESLint', 'http://eslint.org/', 'Metrik/Qualitäts/Style Checker')
         +defItem('Mocha', 'http://visionmedia.github.io/mocha/', 'Test Framework')
         +defItem('Karma', 'http://karma-runner.github.io/', 'Test runner für Frontendtests')
         +defItem('Karma-Mocha', 'https://github.com/karma-runner/karma-mocha', 'Mocha in Frontendtests benutzen')
