--- a/socrates/lib/members/views/get.jade
+++ b/socrates/lib/members/views/get.jade
@@ -34,11 +34,21 @@ block content
 
       if(accessrights.canEditMember(member) && isInDoubleBedRoom)
         p
-          strong #{t('members.roommate')}:&nbsp;
           if roommate
+            strong #{t('members.roommate')}:&nbsp;
             | #{roommate.displayName()}
           else
-            | Not assigned yet
+            strong #{t('members.roommate')}:&nbsp;
+            | You do not have a roommate yet.
+            p
+            | The following participants are looking for a roommate as well. If you would like to share a room with one of them, please discuss this with them :-)#{' '}
+            a(href='mailto:info@softwerkskammer.org') When you both agree, tell us.
+            | #{' '}Otherwise, we will match you up at random.
+            p
+            ul
+              for potentialRoommate in potentialRoommates
+                li
+                  a(href='/members/#{potentialRoommate.nickname()}') #{potentialRoommate.displayName()}
 
       p &nbsp;
     .col-md-4
