--- a/softwerkskammer/lib/members/views/memberlist-mixin.jade
+++ b/softwerkskammer/lib/members/views/memberlist-mixin.jade
@@ -17,7 +17,10 @@ mixin memberlist(members, organizers)
             | &nbsp; <a href='#' rel='tooltip' data-content='#{member.nickname()}' title='<div style="height: 128px;"><img src=#{member.avatarUrl(128)} width="128" height="128"/></div>' >
             img.hidden-print(src=member.inlineAvatar(), width='16', height='16')
             | </a>
-        dd #{member.firstname()} #{member.lastname()}, #{member.location()}&nbsp;
+        dd #{member.firstname()} #{member.lastname()}
+          if member.location()
+            |, #{member.location()}
+          | &nbsp;
           if (organizers && organizers.indexOf(member.id()) > -1)
             a(href='/mailsender/contactMember/#{encodeURIComponent(member.nickname())}', title=t('mailsender.write')): span.label(style='background-color: #DF5353') #{t('groups.contact')}
 
