removed comments in new variables.less

--- a/socrates/frontend/less/variables.less
+++ b/socrates/frontend/less/variables.less
@@ -2,30 +2,27 @@
 
 
 // we are overriding the following values from the original bootstrap variables.less
-@brand-primary:         lighten(#2B5ABC, 15%); // CUSTOM
-@brand-info:            @brand-primary; // CUSTOM
-@brand-warning:         #EBB847; // CUSTOM
+@brand-primary:         lighten(#2B5ABC, 15%);
+@brand-info:            @brand-primary;
+@brand-warning:         #EBB847;
 @brand-danger:          #B65353;
 
-@text-color:            @gray-darker; // CUSTOM
+@text-color:            @gray-darker;
 
-@font-family-sans-serif:  "Source Sans Pro", Helvetica, Arial, sans-serif; // CUSTOM
+@font-family-sans-serif:  "Source Sans Pro", Helvetica, Arial, sans-serif;
 @font-family-serif:       "PT Serif", "Times New Roman", Times, serif;
-@font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace; // CUSTOM
+@font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-serif;
 
-@font-size-base:          16px; // CUSTOM
-//** By default, this inherits from the `<body>`.
+@font-size-base:          16px;
 @headings-font-family:    "PT Serif Caption";
-@headings-font-weight:    bold; // CUSTOM
+@headings-font-weight:    bold;
 
-//** `<input>` border color
-@input-border:                   #eee; // CUSTOM
+@input-border:                   #eee;
 
-@navbar-inverse-bg:                         darken(#B65353, 30%); // CUSTOM
+@navbar-inverse-bg:                         darken(#B65353, 30%);
 
-@navbar-inverse-link-active-bg:             darken(@navbar-inverse-bg, 2%); // CUSTOM
-// Inverted navbar toggle
-@navbar-inverse-toggle-hover-bg:            @navbar-inverse-link-active-bg; // CUSTOM
-@navbar-inverse-toggle-border-color:        @navbar-inverse-link-active-bg; // CUSTOM
+@navbar-inverse-link-active-bg:             darken(@navbar-inverse-bg, 2%);
+@navbar-inverse-toggle-hover-bg:            @navbar-inverse-link-active-bg;
+@navbar-inverse-toggle-border-color:        @navbar-inverse-link-active-bg;
 
