--- a/softwerkskammer/frontend/less/variables.less
+++ b/softwerkskammer/frontend/less/variables.less
@@ -2,13 +2,13 @@
 
 
 // we are overriding the following values from the original bootstrap variables.less
-@brand-warning:         #EBB847; // CUSTOM
+@brand-warning:         #EBB847;
 
-@text-color:            @gray-darker; // CUSTOM
+@text-color:            @gray-darker;
 
-@font-family-sans-serif:  "Source Sans Pro", Helvetica, Arial, sans-serif; // CUSTOM
-@font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace; // CUSTOM
+@font-family-sans-serif:  "Source Sans Pro", Helvetica, Arial, sans-serif;
+@font-family-monospace:   "Source Code Pro", Menlo, Monaco, Consolas, "Courier New", monospace;
 
-@font-size-base:          16px; // CUSTOM
+@font-size-base:          16px;
 
-@headings-font-weight:    bold; // CUSTOM
+@headings-font-weight:    bold;
