updated credits: jqcloud & smartmenus

--- a/softwerkskammer/lib/site/views/credits.jade
+++ b/softwerkskammer/lib/site/views/credits.jade
@@ -62,7 +62,7 @@ block content
       h4 Frontend Widgets
       dl.dl-horizontal
         +defItem('Bootstrap-Markdown', 'http://toopay.github.com/bootstrap-markdown/', 'Markdown Editor für Textareas')
-        +defItem('jQCloud', 'https://github.com/mistic100/jQCloud', 'Die [tag] Cloud')
+        +defItem('jQCloud', 'https://github.com/leider/jQCloud', 'Die [tag] Cloud')
         +defItem('Colorpicker for Bootstrap', 'https://github.com/mjolnic/bootstrap-colorpicker/', 'Farben auswählen im Bootstrap Stil')
         +defItem('Tiny Color', 'https://github.com/bgrins/TinyColor', 'Arbeiten mit Farben')
         +defItem('Tiny Gradient', 'https://github.com/mistic100/tinygradient', 'Gradienten - basierend auf Tiny Color')
