updated credits: jqcloud & smartmenus

--- a/softwerkskammer/lib/site/views/credits.jade
+++ b/softwerkskammer/lib/site/views/credits.jade
@@ -74,7 +74,7 @@ block content
         +defItem('jquery-guillotine', 'http://matiasgagliano.github.io/guillotine/', 'sizing, rotating, cropping of images inside the browser')
         +defItem('select2', 'http://ivaynberg.github.io/select2/', 'Tag Darstellung in Inputboxen')
         +defItem('select2-bootstrap-css', 'http://fk.github.io/select2-bootstrap-css/', 'Bootstrap Integration für Select2')
-        +defItem('smartmenus', 'http://www.smartmenus.org/', 'Hierarchische Menus / Dropdowns')
+        +defItem('smartmenus', 'https://github.com/drmonty/smartmenus', 'Hierarchische Menus / Dropdowns (http://www.smartmenus.org/)')
 
       h4 Backend Rendering
       dl.dl-horizontal
