removed unnecessary classes from timepickers

--- a/softwerkskammer/views/formComponents.jade
+++ b/softwerkskammer/views/formComponents.jade
@@ -90,7 +90,7 @@ mixin date(name, label, value, tooltip)
     input.form-control.datepicker(id=name, type='text', name=name, value=value)
 
 mixin time(name, value)
-  .form-group.bootstrap-timepicker
+  .form-group
     label.control-label(for=name) &nbsp;
     input.form-control.timepicker(id=name, type='text', name=name, value=value)
 
