--- a/softwerkskammer/lib/site/views/credits.jade
+++ b/softwerkskammer/lib/site/views/credits.jade
@@ -68,7 +68,7 @@ block content
         +defItem('Tiny Gradient', 'https://github.com/mistic100/tinygradient', 'Gradienten - basierend auf Tiny Color')
         +defItem('Full Calendar', 'http://arshaw.com/fullcalendar/', 'Der Kalender')
         +defItem('Bootstrap-Datepicker', 'https://github.com/eternicode/bootstrap-datepicker', 'Datumseingabe')
-        +defItem('Bootstrap-Timepicker', 'https://github.com/jdewit/bootstrap-timepicker', 'Zeiteingabe')
+        +defItem('Simple-Timepicker', 'https://github.com/leider/simple-timepicker', 'Zeiteingabe')
         +defItem('Datatables', 'http://www.datatables.net/', 'Für Administration')
         +defItem('Datatables Plugins', 'https://github.com/DataTables/Plugins/tree/master/integration', 'Bootstrap / FontAwesome Integration')
         +defItem('jquery-guillotine', 'http://matiasgagliano.github.io/guillotine/', 'sizing, rotating, cropping of images inside the browser')
