mini fix (display) in SoCraTes tables

--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -272,7 +272,7 @@ block content
                   tr
                     th 1. Teilnehmer
                     th 2. Teilnehmer
-                    td Zuordnung entfernen
+                    th Zuordnung entfernen
                 tbody
                   for pair in rooms[resourceName].roomPairs
                     tr
