--- a/socrates/lib/registration/views/managementTables.jade
+++ b/socrates/lib/registration/views/managementTables.jade
@@ -374,6 +374,8 @@ block content
                   th Vorname
                   th Nachname
                   th E-Mail
+                  th T-Shirt
+                  th Zimmer mit
                   th Heimatadresse
                   th Rechnungsadresse
                   th Ressource
@@ -383,6 +385,8 @@ block content
                     td #{line.member.firstname()}
                     td #{line.member.lastname()}
                     td #{line.member.email()}
+                    td #{line.addon.tShirtSize()}
+                    td #{line.participation.roommate()}
                     td: +formatAsLines(line.addon.homeAddressLines())
                     td: +formatAsLines(line.addon.billingAddressLines())
                     td #{formatList(activity.resources().resourceNamesOf(line.member.id()))}
