--- a/softwerkskammer/lib/site/views/credits.jade
+++ b/softwerkskammer/lib/site/views/credits.jade
@@ -70,7 +70,7 @@ block content
         +defItem('Bootstrap-Datepicker', 'https://github.com/eternicode/bootstrap-datepicker', 'Datumseingabe')
         +defItem('Simple-Timepicker', 'https://github.com/leider/simple-timepicker', 'Zeiteingabe')
         +defItem('Datatables', 'http://www.datatables.net/', 'Für Administration')
-        +defItem('Datatables Plugins', 'https://github.com/DataTables/Plugins/tree/master/integration', 'Bootstrap / FontAwesome Integration')
+        +defItem('Datatables Plugins', 'http://datatables.net/plug-ins/', 'Bootstrap / FontAwesome /Internationalization Integration')
         +defItem('jquery-guillotine', 'http://matiasgagliano.github.io/guillotine/', 'sizing, rotating, cropping of images inside the browser')
         +defItem('select2', 'http://ivaynberg.github.io/select2/', 'Tag Darstellung in Inputboxen')
         +defItem('select2-bootstrap-css', 'http://fk.github.io/select2-bootstrap-css/', 'Bootstrap Integration für Select2')
