--- a/socrates/views/formComponents.jade
+++ b/socrates/views/formComponents.jade
@@ -14,6 +14,15 @@ mixin textWithTags(name, label, value, tags)
     script.
       $(#{name}).select2({tags: true, tokenSeparators: [',', ', ']});
 
+mixin multiselect(name, label, value, tags)
+  .form-group
+    +controlLabel(name, label)
+    select.form-control(multiple, id=name, name=name)
+      each tag in tags
+        option(selected = value.indexOf(tag) > -1) #{tag}
+    script.
+      $(#{name}).select2();
+
 mixin currency(name, label, value, tooltip, placeholder, readonly)
   .form-group
     if (readonly)
