fixing nasty HTML in SoCraTes site

--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -36,11 +36,11 @@ block content
           ul
             li Highly collaborative interactions
             li A self-organized Open Space, with &hellip;
-            ul
-              li hands-on coding sessions
-              li sessions focused on discussion
-              li interactive talks
-              li lots more
+              ul
+                li hands-on coding sessions
+                li sessions focused on discussion
+                li interactive talks
+                li lots more
           h3 It's about Fun
           p.
             We will not only spend the days together but also the nights. And &ndash; believe it or not &ndash; programmers 
@@ -117,4 +117,4 @@ block content
 
 mixin sponsorCol(sponsor)
   .col-lg-6
-    a(href=sponsor.url, target='_blank'): img(src='logos/' + sponsor.logo, alt=sponsor.name, width='160px')
+    a(href=sponsor.url, target='_blank'): img(src='logos/' + sponsor.logo, alt=sponsor.name, width='160')
