--- a/socrates/lib/site/views/schedule.jade
+++ b/socrates/lib/site/views/schedule.jade
@@ -19,7 +19,7 @@ block content
       .panel.panel-primary.col-sm-4(style='float:right;padding: 0px;')
         .panel-heading
           h4.panel-title Open Space Technology
-        .panel-body
+        .panel-body.
           is an approach for hosting meetings, conferences, corporate-style retreats and community summit events, 
           focused on a specific and important purpose or task &ndash; but beginning without any formal agenda, beyond 
           the overall purpose or theme.
