--- a/socrates/views/layoutComponents.jade
+++ b/socrates/views/layoutComponents.jade
@@ -6,28 +6,28 @@ mixin loginMenu(forInline)
        | #{' ' + user.member.nickname()}
       else
        |  #{t('general.guest')}
-      ul.dropdown-menu
-        if accessrights.isRegistered()
-          li: a(href='/members/' + encodeURIComponent(user.member.nickname()))
-            span.glyphicon.glyphicon-eye-open
-            | &nbsp;#{t('members.view')}
-          li: a(href='/members/edit')
-            span.glyphicon.glyphicon-edit
-            | &nbsp;#{t('members.edit')}
-          li: a(href='/auth/logout')
-            span.glyphicon.glyphicon-log-out
-            | &nbsp;#{t('general.logout')}
-          if user.member.socratesOnly() || true
-            li: a(href='/resign')
-              span.glyphicon.glyphicon-ban-circle
-              | &nbsp;#{t('members.resign')}
-        else
-          li: a(data-toggle='modal', data-target='#login', href='/loginDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))
-            span.glyphicon.glyphicon-log-in
-            | &nbsp;#{t('general.login')}
-        li: a(href='https://github.com/softwerkskammer/Agora/issues', title=t('general.what_does_not_work'), target='_blank')
-          span.glyphicon.glyphicon-send
-          | &nbsp;#{t('general.feedback')}
+    ul.dropdown-menu
+      if accessrights.isRegistered()
+        li: a(href='/members/' + encodeURIComponent(user.member.nickname()))
+          span.glyphicon.glyphicon-eye-open
+          | &nbsp;#{t('members.view')}
+        li: a(href='/members/edit')
+          span.glyphicon.glyphicon-edit
+          | &nbsp;#{t('members.edit')}
+        li: a(href='/auth/logout')
+          span.glyphicon.glyphicon-log-out
+          | &nbsp;#{t('general.logout')}
+        if user.member.socratesOnly() || true
+          li: a(href='/resign')
+            span.glyphicon.glyphicon-ban-circle
+            | &nbsp;#{t('members.resign')}
+      else
+        li: a(data-toggle='modal', data-target='#login', href='/loginDialog?returnUrl=' + encodeURIComponent(currentUrl ||  '/'))
+          span.glyphicon.glyphicon-log-in
+          | &nbsp;#{t('general.login')}
+      li: a(href='https://github.com/softwerkskammer/Agora/issues', title=t('general.what_does_not_work'), target='_blank')
+        span.glyphicon.glyphicon-send
+        | &nbsp;#{t('general.feedback')}
 
 mixin notificationsBlock(notificationmessage)
   -notificationmessage.kill()
@@ -46,7 +46,7 @@ mixin navbar(xs)
         span.icon-bar
         span.icon-bar
       .navbar-brand(style='padding-top: 5px; padding-right: 0px;', title='SoCraTes 2015')
-        a(href='/'): img(src='/img/socrates_no_text_40.png')
+        a(href='/'): img(src='/img/socrates_no_text_40.png', alt='logo')
     .navbar-collapse.collapse
       if (!xs)
         ul.nav.navbar-nav.navbar-right
@@ -110,7 +110,7 @@ mixin contactbuttons
     a.btn.btn-info(href='https://twitter.com/intent/tweet?text=SoCraTes+2015+will+take+place+from+27+to+30+August.+More+at&url=http%3A%2F%2Fsocrates-conference.de%2F&hashtags=socrates_15&via=socrates_2015', title='Tweet')
       i.fa.fa-fw.fa-twitter
       span.hidden-xs #{' ' + t('general.tweet')}
-    a.btn.btn-info.dropdown-toggle(type='button', data-toggle='dropdown')
+    a.btn.btn-info.dropdown-toggle(data-toggle='dropdown')
       i.fa.fa-caret-up
     ul.dropdown-menu(role='menu')
       li: a(href='https://twitter.com/intent/user?screen_name=socrates_2015') #{t('general.show_tweets')}
