Show next year's conferences on the homepage.

--- a/softwerkskammer/views/layout.jade
+++ b/softwerkskammer/views/layout.jade
@@ -17,6 +17,11 @@ block specific
           br
           small.
             #{t('general.events_in_europe_desc')}
+        h4
+          a(href='/wiki/alle/europaweite-veranstaltungen-2016') #{t('general.events_in_europe')} 2016
+          br
+          small.
+            #{t('general.events_in_europe_desc')}
 
     if (latestNews)
       h2 #{t('announcements.latest_news')}&nbsp;
