created a banner for easy resignement from participation / waitlist

--- a/socrates/frontend/less/socrates.less
+++ b/socrates/frontend/less/socrates.less
@@ -1,6 +1,11 @@
 @import "variables.less";
 @import "mixins.less";
 
+.large-text {
+  font-size: @font-size-large;
+  line-height: @line-height-large;
+}
+
 .container {
   width: inherit;
   @media (min-width: @screen-md-min) {
