--- a/socrates/lib/members/views/get.jade
+++ b/socrates/lib/members/views/get.jade
@@ -3,6 +3,7 @@ extends ../../../views/layout
 include ../../../views/formComponents
 include ../../../../softwerkskammer/lib/members/views/editavatar
 include ../../../../softwerkskammer/lib/members/views/memberlist-mixin
+include resignBanner
 
 block title
   | #{member.firstname()} #{member.lastname()} - #{t('members.profile')}
@@ -10,6 +11,7 @@ block title
 block content
   .row
     .col-md-12
+      +resignBanner(registration)
       .page-header
         .btn-group.pull-right
           if (accessrights.canEditMember(member))
@@ -47,15 +49,6 @@ block content
             | #{' '}Otherwise, we will match you up at random.
             p
             +memberlist(potentialRoommates)
-
-      if registration.alreadyRegistered || registration.alreadyOnWaitinglist
-        p <strong>Can't make it to SoCraTes?</strong> #{''}
-          a(href='mailto:info@softwerkskammer.org') Please tell us
-          | #{''} so that we can release your #{''}
-          if registration.alreadyRegistered
-            | participant spot!
-          else
-            | waitinglist spot!
 
       p &nbsp;
     .col-md-4
