--- a/softwerkskammer/lib/members/views/editavatar.jade
+++ b/softwerkskammer/lib/members/views/editavatar.jade
@@ -1,7 +1,14 @@
 include ../../../views/formComponents
 include ../../../views/imageUpload
-  
+
 mixin avatar(member, returnToParticipantsListing)
+  if(accessrights.canEditMember(member))
+    +editavatar(member, returnToParticipantsListing)
+  else
+    div(style='width: 200px')
+      img(src=member.avatarUrl())
+
+mixin editavatar(member, returnToParticipantsListing)
   div(style='width: 200px')
     form(id='recordForm', role='form', method='POST', action='/members/submitavatar' + '?_csrf=' + encodeURIComponent(csrf_token), enctype='multipart/form-data')
       +hidden('returnToParticipantsListing', returnToParticipantsListing)
