--- a/socrates/lib/notifications/jade/wikichangetemplate.jade
+++ b/socrates/lib/notifications/jade/wikichangetemplate.jade
@@ -7,7 +7,7 @@ html
         font-size: 12px;
         line-height: 1.2;
       }
-      .table {
+      table {
         width: 100%;
         border-collapse: collapse;
       }
