--- a/socrates/lib/notifications/jade/superuserRemovalNotification.jade
+++ b/socrates/lib/notifications/jade/superuserRemovalNotification.jade
@@ -2,5 +2,4 @@ doctype html
 html
   body
     h3 SoCraTes Removal
-    p
-      | #{member.displayName()} (#{member.nickname()}) has been removed from the #{bookingdetails.resourceKind}.
+    p #{member.displayName()} (#{member.nickname()}) has been removed from the #{bookingdetails.resourceKind}.
