Slightly rephrased the column heading...

--- a/socrates/lib/registration/views/reception.jade
+++ b/socrates/lib/registration/views/reception.jade
@@ -26,7 +26,7 @@ block content
             tr
               th Lastname
               th Firstname
-              th Size
+              th T-Shirt Size
               th Deposit received (Confirmation)
           tbody 
             for line in addonLines[letter]
